force-app/main/default/objects/EndPoint_fedex__mdt/fields/contrase_a__c.field-meta.xml
<CustomField>
    <fullName>contrase_a__c</fullName>
    <label>contraseña</label>
    <length>255</length>
    <type>Text</type>
</CustomField>