force-app/main/default/objects/EndPoint_fedex__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>EndPoint</label>
    <type>Url</type>
</CustomField>