force-app/main/default/objects/EndPoint_fedex__mdt/fields/Fedex_Accoun__c.field-meta.xml
<CustomField>
    <fullName>Fedex_Accoun__c</fullName>
    <label>Fedex Accoun</label>
    <length>255</length>
    <type>Text</type>
</CustomField>