force-app/main/default/objects/EndPoint_fedex__mdt/fields/flujo__c.field-meta.xml
<CustomField>
    <fullName>flujo__c</fullName>
    <label>flujo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Importación</fullName>
                <default>true</default>
                <label>Importación</label>
            </value>
            <value>
                <fullName>exportación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>