force-app/main/default/objects/EndPoint_fedex__mdt/fields/Meter_Number__c.field-meta.xml
<CustomField>
    <fullName>Meter_Number__c</fullName>
    <label>Meter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>