force-app/main/default/objects/EndPoint_fedex__mdt/fields/nombre_contacto__c.field-meta.xml
<CustomField>
    <fullName>nombre_contacto__c</fullName>
    <label>nombre contacto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>