force-app/main/default/objects/EndPoint_fedex__mdt/fields/numero_cuenta__c.field-meta.xml
<CustomField>
    <fullName>numero_cuenta__c</fullName>
    <label>numero cuenta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>