force-app/main/default/objects/EndPoint_fedex__mdt/fields/telefono_contacto__c.field-meta.xml
<CustomField>
    <fullName>telefono_contacto__c</fullName>
    <label>telefono contacto</label>
    <type>Phone</type>
</CustomField>