force-app/main/default/objects/EndPoint_fedex__mdt/fields/usuario__c.field-meta.xml
<CustomField>
    <fullName>usuario__c</fullName>
    <label>usuario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>